--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,8 +10,18 @@
 
 <body>
 
+  <!-- <% console.log("adminPage") %> -->
+
   <h1>Admin</h1>
 
+  <ul>
+    <li><a href="#" id="getListUsers">Get list users</a></li>
+  </ul>
+
+  <div class="out"></div>
+
 </body>
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script type="module" src="public/js/adminPage.js"></script>
 
 </html>
