--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-<script src="public/js/index.js"></script>
+<script type="module" src="public/js/index.js"></script>
 
 
 </html>
